--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
+    "swiper": "^10.2.0",
     "universal-cookie": "^4.0.4",
     "yup": "^1.2.0"
   },
