--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-social-login-buttons": "^3.9.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.9.0",
     "redux-persist": "^6.0.0",
     "swiper": "^10.2.0",
     "universal-cookie": "^4.0.4",
