--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jwt-decode": "^3.1.2",
     "mui-file-input": "^2.0.4",
     "mui-image": "^1.0.7",
+    "mui-one-time-password-input": "^2.0.1",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
